fix: zoom feature not working on photo pages

--- a/Comfortable_layout_for_Impress_watch.user.css
+++ b/Comfortable_layout_for_Impress_watch.user.css
@@ -5,7 +5,7 @@
   #page-wrap {
     width: 100% !important;
   }
-  #page,
+  :is(#top, #article, #listing) #page,
   #global-nav {
     width: 65vw !important;
     min-width: 980px !important;
@@ -25,6 +25,6 @@
 
   /* for photo page */
   #zoom #page {
-    width: 100% !important;
+    min-width: 100vw !important;
   }
 }
