Amazon content manager is renewed

--- a/Hide_delete_button_from_Kindle_content_manager.user.css
+++ b/Hide_delete_button_from_Kindle_content_manager.user.css
@@ -1,11 +1,8 @@
 /* Hide delete button from Kindle content manager */
 @namespace url("http://www.w3.org/1999/xhtml");
 
-@-moz-document
-  url-prefix("https://www.amazon.co.jp/hz/mycd/myx"),
-  url-prefix("https://www.amazon.co.jp/mn/dcw/myx")
-{
-  #contentAction_delete_myx {
+@-moz-document url-prefix("https://www.amazon.co.jp/hz/mycd/digital-console/") {
+  #BULK_DELETE_TITLE_ACTION, [id^="DELETE_TITLE_ACTION"] {
     display: none !important;
   }
 }
