--- a/Highlight_a_selected_row_for_Kindle_content_manager.user.css
+++ b/Highlight_a_selected_row_for_Kindle_content_manager.user.css
@@ -1,11 +1,8 @@
 /* Highlight a selected row for Kindle content manager */
 @namespace url("http://www.w3.org/1999/xhtml");
 
-@-moz-document
-  url-prefix("https://www.amazon.co.jp/hz/mycd/myx"),
-  url-prefix("https://www.amazon.co.jp/mn/dcw/myx")
-{
-  .contentTableList_myx .myx-active {
-    background-color: #fed !important;
+@-moz-document url-prefix("https://www.amazon.co.jp/hz/mycd/digital-console/") {
+  [class^="DigitalEntitySummary"]:has(input:checked) {
+    background-color: seashell !important;
   }
 }
