--- a/Highlight_a_selected_row_for_Kindle_content_manager.user.css
+++ b/Highlight_a_selected_row_for_Kindle_content_manager.user.css
@@ -2,7 +2,7 @@
 @namespace url("http://www.w3.org/1999/xhtml");
 
 @-moz-document url-prefix("https://www.amazon.co.jp/hz/mycd/digital-console/") {
-  [class^="DigitalEntitySummary"]:has(input:checked) {
+  [class^="DigitalEntitySummary-module__container_"]:has(input[id$=":KindleEBook"]:checked) {
     background-color: seashell !important;
   }
 }
