Follow minor design update

--- a/Show_last_modified_timestamp_for_Wikipedia.user.css
+++ b/Show_last_modified_timestamp_for_Wikipedia.user.css
@@ -5,8 +5,8 @@
   #footer-info-lastmod {
     padding: 0 !important;
     position: absolute !important;
-    top: 0.6rem !important;
-    left: 21.1rem !important;
+    top: 0rem !important;
+    left: 22em !important;
     display: block !important;
   }
 }
