--- a/Google_web_search_tweak.user.css
+++ b/Google_web_search_tweak.user.css
@@ -20,8 +20,12 @@
   }
 
   /* Missing words and/or Recently visited page */
-  .TXwUJf   { font: bold larger/2 sans-serif !important; }
-  .TXwUJf s { text-decoration: none !important; }
+  .TXwUJf {
+    font: bold larger/2 sans-serif !important;
+  }
+  .TXwUJf s {
+    text-decoration: none !important;
+  }
 
   .TXwUJf s::before {
     content: "\2718";
