fix: temporally fix the background issue

--- a/Google_web_search_tweak.user.css
+++ b/Google_web_search_tweak.user.css
@@ -9,9 +9,11 @@
   #tads, #bottomads {
     background: #ffd !important;
   }
+  /*
   #tads * {
     background-color: inherit !important;
   }
+  */
 
   /* ChillingEffects */
   #extrares {
