--- a/No_text_wrap_for_ANA_Mileage_Account.user.css
+++ b/No_text_wrap_for_ANA_Mileage_Account.user.css
@@ -1,7 +1,10 @@
 /* No text wrap for ANA Mileage Account */
 @namespace url("http://www.w3.org/1999/xhtml");
 
-@-moz-document url-prefix("https://cam.ana.co.jp/psz/amcj/jsp/renew/mile/reference.jsp") {
+@-moz-document
+  url-prefix("https://cam.ana.co.jp/psz/amcj/jsp/renew/mile/reference.jsp"),
+  url-prefix("https://stmt.cam.ana.co.jp/psz/amcj/jsp/renew/mile/reference.jsp")
+{
   #meisaitable .right {
     white-space: nowrap !important;
   }
