--- a/Show_last_modified_timestamp_for_Wikipedia.user.css
+++ b/Show_last_modified_timestamp_for_Wikipedia.user.css
@@ -5,7 +5,7 @@
   #footer-info-lastmod {
     padding: 0 !important;
     position: absolute !important;
-    top: 0rem !important;
+    top: 0 !important;
     left: 22em !important;
     display: block !important;
   }
